        statements
        
        * logger.py: Fix bug where blank lines in history were not
        added until AFTER adding the current line; translated and raw
        history should finally be in sync with prompt now.
        
        * ipy_completers.py: quick_completer now makes it easy to create
        trivial custom completers
        
        * clearcmd.py: shadow history compression & erasing
        
        * envpersist.py, history.py: %env (sh profile only), %hist completers
        
        * genutils.py, Prompts.py, Magic.py: win32 - prompt (with \yDEPTH) and
        term title now include the drive letter, and always use / instead of
        os.sep (as per recommended approach for win32 ipython in general).

2007-08-21  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: finding ipythonrc-PROF now skips ipy_profile_PROF.
        (for backwards compatibility)
        
        * history.py: switch back to %hist -t from %hist -r as default.
        At least until raw history is fixed for good.

2007-08-20  Ville Vainio  <vivainio@gmail.com>

	* ipapi.py, iplib.py: DebugTools accessible via _ip.dbg, to catch &
        locate alias redeclarations etc. Also, avoid handling
        _ip.IP.alias_table directly, prefer using _ip.defalias.
        

2007-08-15  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: ! is now always served first

2007-08-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (safe_execfile): fix the SystemExit
	auto-suppression code to work in Python2.4 (the internal structure
	of that exception changed and I'd only tested the code with 2.5).
	Bug reported by a SciPy attendee.

2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: reverted !c:/bin/foo fix, made % in
        multiline specials work again

2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: Take more care to special-case !, so that
        !c:/bin/foo.exe works.
        